--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "router": "^1.3.8",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-carousel": "^0.3.3",
     "vuex": "^4.1.0",
     "vuex-persistedstate": "^4.1.0"
   },
