--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "core-js": "^3.8.3",
     "router": "^1.3.8",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.3",
     "vue3-carousel": "^0.3.3",
     "vuex": "^4.1.0",
