--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/vue3": "^6.1.11",
+    "@vuepic/vue-datepicker": "^8.6.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "core-js": "^3.8.3",
     "router": "^1.3.8",
+    "sweetalert2": "^11.11.0",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.3",
