--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "core-js": "^3.8.3",
+    "react-calendar": "^5.0.0",
     "router": "^1.3.8",
     "sweetalert2": "^11.11.0",
     "vue": "^3.2.13",
