--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.8.3",
     "react-calendar": "^5.0.0",
     "router": "^1.3.8",
+    "signature_pad": "^5.0.0",
     "sweetalert2": "^11.11.0",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.1",
