--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/vue3": "^6.1.11",
     "@vuepic/vue-datepicker": "^8.6.0",
     "axios": "^1.6.8",
@@ -18,6 +19,7 @@
     "react-calendar": "^5.0.0",
     "router": "^1.3.8",
     "signature_pad": "^5.0.0",
+    "solapi": "^5.3.0",
     "sweetalert2": "^11.11.0",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.1",
