--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.3",
     "vue3-carousel": "^0.3.3",
+    "vue3-datepicker": "^0.4.0",
     "vue3-kakao-maps": "^2.3.4",
     "vuex": "^4.1.0",
     "vuex-persistedstate": "^4.1.0"
