--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "core-js": "^3.8.3",
+    "filepond": "^4.31.1",
+    "filepond-plugin-image-preview": "^4.6.12",
     "react-calendar": "^5.0.0",
     "router": "^1.3.8",
     "signature_pad": "^5.0.0",
@@ -23,6 +25,7 @@
     "sweetalert2": "^11.11.0",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.1",
+    "vue-filepond": "^7.0.4",
     "vue-router": "^4.0.3",
     "vue3-carousel": "^0.3.3",
     "vue3-datepicker": "^0.4.0",
