--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.8.3",
     "filepond": "^4.31.1",
     "filepond-plugin-image-preview": "^4.6.12",
+    "jquery": "^3.7.1",
     "react-calendar": "^5.0.0",
     "router": "^1.3.8",
     "signature_pad": "^5.0.0",
