--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "filepond": "^4.31.1",
     "filepond-plugin-image-preview": "^4.6.12",
     "jquery": "^3.7.1",
+    "mitt": "^3.0.1",
     "react-calendar": "^5.0.0",
     "router": "^1.3.8",
     "signature_pad": "^5.0.0",
