--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fullcalendar/core": "^6.1.11",
-    "@fullcalendar/daygrid": "^6.1.11",
-    "@fullcalendar/interaction": "^6.1.11",
-    "@fullcalendar/vue3": "^6.1.11",
-    "@vuepic/vue-datepicker": "^8.6.0",
-    "axios": "^1.6.8",
-    "chart.js": "^4.4.2",
+    "@fullcalendar/core": "^6.1.13",
+    "@fullcalendar/daygrid": "^6.1.13",
+    "@fullcalendar/interaction": "^6.1.13",
+    "@fullcalendar/vue3": "^6.1.13",
+    "@vuepic/vue-datepicker": "^8.7.0",
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
     "filepond": "^4.31.1",
     "filepond-plugin-image-preview": "^4.6.12",
@@ -22,16 +22,17 @@
     "mitt": "^3.0.1",
     "react-calendar": "^5.0.0",
     "router": "^1.3.8",
-    "signature_pad": "^5.0.0",
+    "signature_pad": "^5.0.1",
     "solapi": "^5.3.0",
     "sweetalert2": "^11.11.0",
+    "swiper": "^11.1.4",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.1",
     "vue-filepond": "^7.0.4",
     "vue-router": "^4.0.3",
     "vue3-carousel": "^0.3.3",
     "vue3-datepicker": "^0.4.0",
-    "vue3-kakao-maps": "^2.3.4",
+    "vue3-kakao-maps": "^2.3.9",
     "vuetify": "^3.6.7",
     "vuex": "^4.1.0",
     "vuex-persistedstate": "^4.1.0"
