--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "signature_pad": "^5.0.0",
     "solapi": "^5.3.0",
     "sweetalert2": "^11.11.0",
+    "swiper": "^11.1.4",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.1",
     "vue-filepond": "^7.0.4",
